src/rules/snapshots/pg_migration_lint__rules__pgm006__tests__now_default_fires_warning.snap
---
source: src/rules/pgm006.rs
expression: findings
---
- rule_id: PGM006
  severity: Minor
  message: "Column 'created_at' on 'orders' uses volatile default 'now()'. Unlike non-volatile defaults, this forces a full table rewrite under an ACCESS EXCLUSIVE lock — every existing row must be physically updated with a computed value. For large tables, this causes extended downtime. Consider adding the column without a default, then backfilling with batched UPDATEs."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
